Package_Tools/include_C/in_arbeit/fertig/SDL_haptic.h


typedef struct SDL_Haptic SDL_Haptic;
#define SDL_HAPTIC_CONSTANT     (1u<<0)
#define SDL_HAPTIC_SINE         (1u<<1)
#define SDL_HAPTIC_SQUARE       (1u<<2)
#define SDL_HAPTIC_TRIANGLE     (1u<<3)
#define SDL_HAPTIC_SAWTOOTHUP   (1u<<4)
#define SDL_HAPTIC_SAWTOOTHDOWN (1u<<5)
#define SDL_HAPTIC_RAMP         (1u<<6)
#define SDL_HAPTIC_SPRING       (1u<<7)
#define SDL_HAPTIC_DAMPER       (1u<<8)
#define SDL_HAPTIC_INERTIA      (1u<<9)
#define SDL_HAPTIC_FRICTION     (1u<<10)
#define SDL_HAPTIC_LEFTRIGHT    (1u<<11)
#define SDL_HAPTIC_RESERVED1    (1u<<12)
#define SDL_HAPTIC_RESERVED2    (1u<<13)
#define SDL_HAPTIC_RESERVED3    (1u<<14)
#define SDL_HAPTIC_CUSTOM       (1u<<15)
#define SDL_HAPTIC_GAIN       (1u<<16)
#define SDL_HAPTIC_AUTOCENTER (1u<<17)
#define SDL_HAPTIC_STATUS     (1u<<18)
#define SDL_HAPTIC_PAUSE      (1u<<19)
#define SDL_HAPTIC_POLAR      0
#define SDL_HAPTIC_CARTESIAN  1
#define SDL_HAPTIC_SPHERICAL  2
#define SDL_HAPTIC_STEERING_AXIS 3
#define SDL_HAPTIC_INFINITY   4294967295U
typedef union SDL_HapticEffect
{
    Uint16 type;                    
    SDL_HapticConstant constant;    
    SDL_HapticPeriodic periodic;    
    SDL_HapticCondition condition;  
    SDL_HapticRamp ramp;            
    SDL_HapticLeftRight leftright;  
    SDL_HapticCustom custom;        
} SDL_HapticEffect;
typedef Uint32 SDL_HapticID;
extern  SDL_HapticID *  SDL_GetHaptics(int *count);
extern  const char *  SDL_GetHapticNameForID(SDL_HapticID instance_id);
extern  SDL_Haptic *  SDL_OpenHaptic(SDL_HapticID instance_id);
extern  SDL_Haptic *  SDL_GetHapticFromID(SDL_HapticID instance_id);
extern  SDL_HapticID  SDL_GetHapticID(SDL_Haptic *haptic);
extern  const char *  SDL_GetHapticName(SDL_Haptic *haptic);
extern  bool  SDL_IsMouseHaptic(void);
extern  SDL_Haptic *  SDL_OpenHapticFromMouse(void);
extern  bool  SDL_IsJoystickHaptic(SDL_Joystick *joystick);
extern  SDL_Haptic *  SDL_OpenHapticFromJoystick(SDL_Joystick *joystick);
extern  void  SDL_CloseHaptic(SDL_Haptic *haptic);
extern  int  SDL_GetMaxHapticEffects(SDL_Haptic *haptic);
extern  int  SDL_GetMaxHapticEffectsPlaying(SDL_Haptic *haptic);
extern  Uint32  SDL_GetHapticFeatures(SDL_Haptic *haptic);
extern  int  SDL_GetNumHapticAxes(SDL_Haptic *haptic);
extern  bool  SDL_HapticEffectSupported(SDL_Haptic *haptic, const SDL_HapticEffect *effect);
extern  int  SDL_CreateHapticEffect(SDL_Haptic *haptic, const SDL_HapticEffect *effect);
extern  bool  SDL_UpdateHapticEffect(SDL_Haptic *haptic, int effect, const SDL_HapticEffect *data);
extern  bool  SDL_RunHapticEffect(SDL_Haptic *haptic, int effect, Uint32 iterations);
extern  bool  SDL_StopHapticEffect(SDL_Haptic *haptic, int effect);
extern  void  SDL_DestroyHapticEffect(SDL_Haptic *haptic, int effect);
extern  bool  SDL_GetHapticEffectStatus(SDL_Haptic *haptic, int effect);
extern  bool  SDL_SetHapticGain(SDL_Haptic *haptic, int gain);
extern  bool  SDL_SetHapticAutocenter(SDL_Haptic *haptic, int autocenter);
extern  bool  SDL_PauseHaptic(SDL_Haptic *haptic);
extern  bool  SDL_ResumeHaptic(SDL_Haptic *haptic);
extern  bool  SDL_StopHapticEffects(SDL_Haptic *haptic);
extern  bool  SDL_HapticRumbleSupported(SDL_Haptic *haptic);
extern  bool  SDL_InitHapticRumble(SDL_Haptic *haptic);
extern  bool  SDL_PlayHapticRumble(SDL_Haptic *haptic, float strength, Uint32 length);
extern  bool  SDL_StopHapticRumble(SDL_Haptic *haptic);